--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site de IA</title>
     <link rel="stylesheet" href="style.css">
+    <title>Você decide o futuro da IA</title>
 </head>
 <body>
     <div class="caixa-principal">
         <h1>Você decide o futuro da IA</h1>
         <div class="caixa-perguntas"></div>
-        <div class=" caixa-altetrnativas"></div>
+        <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
             <p class="texto-resultado"></p>
-            </div>
+        </div>
     </div>
-    <script src="mains.js"></script>
+
+    <script src="main.js"></script>
+   
 </body>
 </html>
